shift toolkit dropdown for correct positioning

--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -103,3 +103,6 @@
 #nav_about_link a {
   color:white;
 }
+#nav_about_link {
+  width:7%;
+}
